<resources>
    <string name="app_name" translatable="false">TravelQuest</string>

    <!--Preferences file name-->
    <string name="file_preferences" translatable="false">preferences</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Navigation menu -->
    <string name="nav_profile">Profile</string>
    <string name="nav_quests">Quests</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_achievements">Achievements</string>

    <!-- Login -->

    <string name="title_activity_login">Log in</string>
    <string name="button_login">Login</string>

    <!-- Prompts -->
    <string name="prompt_login">Login or mail</string>
    <string name="prompt_password">Password</string>

    <!-- Errors -->
    <string name="error_login_incorrect">This login is incorrect</string>
    <string name="error_password_incorrect">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed
        for providing email completions"</string>
    <string name="error_login">Login and/or password is invalid</string>

    <!-- Map styles -->
    <string name="settings_map_style_summary">Map color scheme</string>
    <string name="settings_map_style">Map style</string>
    <string-array name="map_styles">
        <item>Classic</item>
        <item>Dark</item>
        <item>Night</item>
        <item>Retro</item>
        <item>Solarized</item>
        <item>White</item>
    </string-array>
    <string-array name="settings_map_style_values" translatable="false">
        <item>сlassic</item>
        <item>dark</item>
        <item>night</item>
        <item>retro</item>
        <item>solarized</item>
        <item>white</item>
    </string-array>
</resources>
